--- a/pedido-service/src/main/resources/application.properties
+++ b/pedido-service/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+server.port=8080
+
 spring.application.name=pedido-service
+
+# Configuração do MySQL local
+spring.datasource.url=jdbc:mysql://localhost:3306/nota_rapida?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# RabbitMQ local
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin123
+
+# Logging
+logging.level.com.notarapida=DEBUG
+logging.level.org.springframework.amqp=DEBUG
