--- a/vendas-service/src/main/resources/application.properties
+++ b/vendas-service/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+# Porta do serviço
+server.port=8081
+
+# Nome da aplicação
 spring.application.name=vendas-service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/vendas_db
+spring.datasource.username=root
+spring.datasource.password=root
+
+# RabbitMQ local (acessível no host porque está no Docker com --network=host ou porta mapeada)
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin123
+
+# Retry do consumidor Rabbit
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.multiplier=2
+
+# Log para debug
+logging.level.com.notarapida=DEBUG
+logging.level.org.springframework.amqp=DEBUG
