--- a/nf-service/src/main/resources/application.properties
+++ b/nf-service/src/main/resources/application.properties
@@ -1,1 +1,36 @@
+# Porta do serviço
+server.port=8082
+
+# Nome da aplicação
 spring.application.name=nf-service
+
+# Configuração do MySQL local
+spring.datasource.url=jdbc:mysql://localhost:3306/nf_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# RabbitMQ local
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin123
+
+# Retry do consumidor RabbitMQ
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.multiplier=2
+
+# Caminho local para salvar os PDFs
+app.pdf.storage.path=/tmp/notas-fiscais
+
+# Logging
+logging.level.com.notarapida=DEBUG
+logging.level.org.springframework.amqp=DEBUG
