--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,1 +1,45 @@
+# Porta do serviço
+server.port=8083
+
+# Nome da aplicação
 spring.application.name=email-service
+
+# Configuração MySQL para email-service
+spring.datasource.url=jdbc:mysql://localhost:3306/email_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# RabbitMQ local (pode usar variáveis de ambiente para Docker)
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:admin}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:admin123}
+
+# Configurações do consumidor RabbitMQ - retry
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.multiplier=2
+
+# Configurações do servidor SMTP (Gmail com senha de app)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+
+# Propriedades adicionais do SMTP
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Logging para debugging
+logging.level.com.notarapida=DEBUG
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.mail=DEBUG
